# dp_sdk_core

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_zh.md
app_registry/: CMakeLists.txt  app_registry.c  app_registry.h
device/: CLAUDE.md  CMakeLists.txt
device/include/: dp_adc_device.h  dp_dac_device.h  dp_device.h  dp_device_manager.h  dp_device_types.h  dp_i2c_device.h  dp_pin_device.h  dp_serial_device.h  dp_spi_device.h
device/test/: CMakeLists.txt  dp_device_test_main.cpp  test_device.cpp  test_pin_device.cpp
docs/: ai_rules.md
docs/blog/: blog-cn.md  blog-en.md
docs/claude-memory/: MEMORY.md  setup-symlink.sh
dp_device/: CLAUDE.md  CMakeLists.txt
dp_device/include/: dp_device.h  dp_device_compat.h  dp_device_manager.h  dp_serial_device.h  (+1 more)
dp_device/test/: CMakeLists.txt  test_device_manager.cpp  test_serial_device.cpp
dp_hal/: CLAUDE.md  CMakeLists.txt
dp_hal/test/: CMakeLists.txt  dp_hal_test_main.cpp  test_can.cpp  test_spi.cpp  test_timer.cpp  test_uart.cpp
dp_osal/: CMakeLists.txt
dp_osal/example/osal_port_freertos/: CMakeLists.txt  dp_osal_port.h
dp_osal/example/osal_port_sim_freertos/: CMakeLists.txt  dp_osal_port.h  osal_port.h
dp_osal/example/osal_port_sim_freertos/cmsis_os2_freertos/cmsis_base/: cmsis_armcc.h  cmsis_iccarm.h  core_armv8mml.h  core_cm1.h  mpu_armv7.h  mpu_armv8.h
dp_osal/example/osal_port_zephyr/: CMakeLists.txt  dp_osal_port.h
dp_osal/port/builtin_posix/: dp_osal_port.h
dp_osal/port/template/: dp_osal_port.h  osal_port.h
dp_osal/src/: dp_osal.h  dp_osal_compat.h  osal_compat.h
dp_osal/src/debug/: dp_osal_debug.cpp  dp_osal_debug.h
dp_osal/src/impl/cmsis_os/: dp_osal_thread_pool.cpp  osal_thread_pool.cpp
dp_osal/src/impl/cmsis_os/include/: dp_osal_chrono.h  dp_osal_condition_variable.h  dp_osal_lockguard.h  dp_osal_memory_manager.h  dp_osal_mutex.h  dp_osal_queue.h  dp_osal_rwlock.h  dp_osal_semaphore.h  dp_osal_spin_lock.h  dp_osal_system.h  dp_osal_thread.h  dp_osal_thread_pool.h  dp_osal_thread_stop.h  dp_osal_timer.h  osal_chrono.h  osal_condition_variable.h  osal_lockguard.h  osal_mutex.h  osal_semaphore.h  osal_thread_stop.h
dp_osal/src/impl/linux/include/: dp_osal_mutex.h  dp_osal_spin_lock.h  dp_osal_system.h  dp_osal_thread_pool.h  dp_osal_timer.h  osal_queue.h
dp_osal/src/impl/posix/: dp_osal_thread_pool.cpp  osal_thread_pool.cpp
dp_osal/src/impl/posix/include/: dp_osal_chrono.h  dp_osal_condition_variable.h  dp_osal_lockguard.h  dp_osal_memory_manager.h  dp_osal_mutex.h  dp_osal_queue.h  dp_osal_rwlock.h  dp_osal_semaphore.h  dp_osal_spin_lock.h  dp_osal_system.h  dp_osal_thread.h  dp_osal_thread_pool.h  dp_osal_timer.h  osal_condition_variable.h  osal_memory_manager.h  osal_mutex.h  osal_queue.h  osal_thread_pool.h  osal_timer.h
dp_osal/src/interface/: dp_osal_static.h  dp_osal_thread_snapshot.h  dp_osal_virtual.h  interface_chrono.h  interface_condition_variable.h  interface_lockguard.h  interface_memory_manager.h  interface_mutex.h  interface_queue.h  interface_rwlock.h  interface_semaphore.h  interface_spin_lock.h  interface_system.h  interface_thread.h  interface_thread_pool.h  interface_timer.h  osal_static.h
dp_osal/test/: dp_osal_test_main.cpp  dp_osal_test_main.h  osal_test_main.cpp  osal_test_main.h
dp_osal/test/gtest/: gtest_chrono.cpp  gtest_condition_variable.cpp  gtest_lockguard.cpp  gtest_memory_manger.cpp  gtest_mutex.cpp  gtest_queue.cpp  gtest_rwlock.cpp  gtest_semaphore.cpp  gtest_spin_lock.cpp  gtest_thread.cpp  gtest_thread_pool.cpp  gtest_timer.cpp  gtest_virtual_injection.cpp
hal/: CMakeLists.txt
hal/include/: dp_can.h  dp_dac.h  dp_hal_compat.h  dp_hal_power.h  dp_hal_types.h  dp_hal_virtual.h  dp_pwm.h  dp_spi.h  dp_uart.h
hal/port/mock/: CMakeLists.txt  dp_hal_port_impl.cpp  hal_port.h  mock_can.h  mock_dac.h  mock_i2c.h  mock_spi.h  mock_timer.h
hal/port/posix/: posix_uart.h
hal/test/: CMakeLists.txt  dp_hal_test_main.cpp  test_adc.cpp  test_dac.cpp  test_gpio.cpp  test_i2c.cpp  test_power.cpp  test_pwm.cpp  test_virtual.cpp
osal/: CMakeLists.txt
osal/example/osal_port_freertos/: CMakeLists.txt  osal_port.h
osal/example/osal_port_sim_freertos/: CMakeLists.txt  osal_port.h
osal/example/osal_port_sim_freertos/cmsis_os2_freertos/: cmsis_os.h  cmsis_os2.h  freertos_mpool.h  freertos_os2.h
osal/example/osal_port_sim_freertos/cmsis_os2_freertos/cmsis_base/: cmsis_compiler.h  cmsis_gcc.h  cmsis_version.h  core_cm4.h  core_sc000.h
osal/example/osal_port_zephyr/: osal_port.h
osal/port/builtin_posix/: osal_port.h
osal/port/template/: osal_port.h
osal/src/: osal.h
osal/src/impl/cmsis_os/: osal_thread_pool.cpp
osal/src/impl/cmsis_os/include/: osal_chrono.h  osal_condition_variable.h  osal_lockguard.h  osal_memory_manager.h  osal_mutex.h  osal_queue.h  osal_rwlock.h  osal_semaphore.h  osal_spin_lock.h  osal_system.h  osal_thread.h  osal_thread_pool.h  osal_thread_stop.h  osal_timer.h
osal/src/impl/linux/include/: osal_chrono.h  osal_condition_variable.h  osal_memory_manager.h  osal_rwlock.h  osal_semaphore.h  osal_system.h  osal_thread.h
osal/src/impl/posix/: osal_thread_pool.cpp
osal/src/impl/posix/include/: osal_chrono.h  osal_condition_variable.h  osal_lockguard.h  osal_memory_manager.h  osal_mutex.h  osal_queue.h  osal_rwlock.h  osal_semaphore.h  osal_spin_lock.h  osal_system.h  osal_thread.h  osal_thread_pool.h  osal_timer.h
osal/src/interface/: interface_chrono.h  interface_condition_variable.h  interface_lockguard.h  interface_memory_manager.h  interface_mutex.h  interface_queue.h  interface_rwlock.h  interface_semaphore.h  interface_spin_lock.h  interface_system.h  interface_thread.h  interface_thread_pool.h  interface_timer.h  osal_static.h  osal_task_snapshot.h  osal_thread_snapshot.h  osal_virtual.h
osal/test/: osal_test_main.cpp
osal/test/gtest/: gtest_chrono.cpp  gtest_condition_variable.cpp  gtest_memory_manger.cpp  gtest_rwlock.cpp  gtest_semaphore.cpp  gtest_spin_lock.cpp  gtest_thread.cpp  gtest_timer.cpp
src/: osal_compat.h
test/: osal_test_main.cpp
(+76 files in other folders)
